# my-coder

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-09.jsonl
src/mycoder/: __main__.py  cli.py  coder.py  session.py
tests/: conftest.py  test_cli.py  test_coder.py  test_session.py
