[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-coder"
version = "0.0.1"
description = "MyThingsLab tool — formalizes the fleet's worker role: closes a picked issue as a draft PR via a full headless coding session."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["my-things-core"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pre-commit>=3"]

[tool.hatch.build.targets.wheel]
packages = ["src/mycoder"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
